8/29: Boilerplate added for printing/initializing the array
